--- a/src/app/components/header/Header.scss
+++ b/src/app/components/header/Header.scss
@@ -13,6 +13,7 @@
     &--signIn {
         text-decoration: none;
         margin-right: 0.5rem;
+        font-weight: 600;
         &:hover {
             text-decoration: underline;
         }
