refacto(scss): review scss for reponsive + delete useless comment

--- a/src/app/pages/connectedHomePage/ConnectedHomePage.scss
+++ b/src/app/pages/connectedHomePage/ConnectedHomePage.scss
@@ -1,5 +1,4 @@
 .container__connected__page {
-
     &__background {
         background-color: #12002b;
         min-height: 84vh;   
@@ -7,7 +6,8 @@
         &__sold {
             display: flex;
             flex-direction: column;
-            align-items: center;
+            align-items: center; 
+            margin-top: 1rem;
         }
     }
 }
