--- a/src/app/components/editProfile/EditProfile.scss
+++ b/src/app/components/editProfile/EditProfile.scss
@@ -1,5 +1,3 @@
-/* EditProfile.scss */
-
 .modal-overlay {
     position: fixed;
     top: 0;
@@ -14,7 +12,7 @@
 }
 
 .container__modal {
-    background: #fff;
+    background: #f1f1f1;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     width: 30rem;
@@ -22,19 +20,24 @@
     padding: 20px;
 
     &__header {
+        border-bottom: 1px solid black;
         margin-bottom: 20px;
-
+        display: flex;
+        justify-content: center;
+        align-items: center;
         &--title {
             font-size: 20px;
             margin: 0;
+            margin-bottom: 0.3rem;
         }
     }
 
     &__close--button {
-        font-size: 24px;
+        font-size: 27px;
         color: #e74c3c;
+        font-weight: bold;
         position: absolute;
-        top: 10px;
+        top: 4px;
         right: 10px;
         background: none;
         border: none;
@@ -46,9 +49,13 @@
         &__form {
             display: flex;
             flex-direction: column;
+            text-align: center;
+            align-items: center;
             input {
                 height: 2rem;
                 width: 70%;
+                border-radius: 10px;
+                border: 1px solid black;
             }
         }
     }
@@ -56,6 +63,8 @@
 
 .label-input {
     margin-top: 1rem;
+    margin-bottom: 0.3rem;
+    font-weight: bold;
 }
 .displayNone {
     display: none
