--- a/src/app/components/soldAccount/SoldAccount.scss
+++ b/src/app/components/soldAccount/SoldAccount.scss
@@ -6,7 +6,7 @@
     background-color: white;
     width: 80%;
     padding: 1.5rem;
-    margin-top: 2rem;
+    margin-bottom: 2rem;
     &__text {
         justify-content: center;
         flex-direction: column;
@@ -32,5 +32,17 @@
     &--btn {
         display: flex;
         align-items: center;
+    }
+}
+
+@media screen and (max-width: 550px) { 
+    .container__sold {
+       flex-direction: column;
+        align-items: center;
+       &--btn {
+        margin-top: 1rem;
+        width: 100%;
+        justify-content: center;
+       }
     }
 }
